--- a/src/pretalx/common/templates/common/base.html
+++ b/src/pretalx/common/templates/common/base.html
@@ -8,8 +8,8 @@
 <html lang="{{ html_locale }}"{% if rtl %} dir="rtl" class="rtl"{% endif %}>
     <head>
         <meta charset="utf-8">
-        <title>{% block title %}{% endblock %} {% if request.event %} {{ request.event.name }} {% endif %}:: {{site_name}} </title>
-        <meta name="title" content="{% block meta_title %}{% endblock %} {% if request.event %} - {{ request.event.name }} {% endif %} {{site_name}}">
+        <title>{% block title %}{% endblock title %} {% if request.event %} {{ request.event.name }} {% endif %}:: {{site_name}} </title>
+        <meta name="title" content="{% block meta_title %}{% endblock meta_title %} {% if request.event %} - {{ request.event.name }} {% endif %} {{site_name}}">
         <meta name="description" content="{% block meta_description %}{% if request.event %}Schedule, talks and talk submissions for {{ request.event.name }}{% else %}Talks and talk submissions by {{site_name}} {% endif %}{% endblock %}">
         <meta name="application-name" content="{{site_name}}">
         <meta name="generator" content="{{site_name}}">
