--- a/src/pretalx/orga/templates/orga/includes/sidebar_nav.html
+++ b/src/pretalx/orga/templates/orga/includes/sidebar_nav.html
@@ -4,7 +4,7 @@
         <span class="has-children">
             <a class="nav-link nav-link-inner" href="{{ nav_element.url }}">
                 {% if nav_element.icon and "." in nav_element.icon %}
-                    <img loading="lazy" src="{% static nav_element.icon %}" class="fa-img" alt="{{ nav_element.label }}">
+                    <i class="fa"><img loading="lazy" src="{% static nav_element.icon %}" class="fa-img" alt="{{ nav_element.label }}"></i>
                 {% elif nav_element.icon %}
                     <i class="fa fa-{{ nav_element.icon }}"></i>
                 {% endif %}
