Improve permission display in admin user detail

--- a/src/pretalx/orga/templates/orga/admin/user_detail.html
+++ b/src/pretalx/orga/templates/orga/admin/user_detail.html
@@ -106,7 +106,13 @@
               {% endif %}
             </td>
 
-            <td>{{ team.permission_set }}</td>
+            <td>
+              <ul>
+                {% for permission in team.permission_set_display %}
+                  <li>{{ permission }}</li>
+                {% endfor %}
+              </ul>
+            </td>
           </tr>
         {% empty %}
           <tr>
