--- a/src/pretalx/orga/templates/orga/submission/review_fragment.html
+++ b/src/pretalx/orga/templates/orga/submission/review_fragment.html
@@ -20,9 +20,9 @@
     </td>
     <td>
         {% if show_reviewer_name %}
-            {{ review.user }}
+            {% include "orga/includes/user_name.html" with user=review.user lightbox=True %}
         {% elif not read_only %}
-            <div class="btn btn-success" id="edit-review">{{ phrases.base.edit }}</div>
+            <div class="btn btn-success" id="edit-review" role="button">{{ phrases.base.edit }}</div>
         {% endif %}
     </td>
 </tr>
