--- a/src/pretalx/static/orga/css/_layout.css
+++ b/src/pretalx/static/orga/css/_layout.css
@@ -977,6 +977,9 @@ table .color-square {
   }
 }
 .review-table.table {
+  thead td {
+    text-align: left;
+  }
   tbody tr,
   thead tr {
     .unmark-radio {
