Fix hover effect on tiny profile picture

--- a/src/pretalx/static/orga/css/_layout.css
+++ b/src/pretalx/static/orga/css/_layout.css
@@ -1266,6 +1266,9 @@ div.mail-preview {
     display: inline;
     vertical-align: middle;
   }
+  a:hover {
+    text-decoration: none;
+  }
 }
 .col-form-label .user-name-display {
   margin-left: auto;
