Add back dynamic domain + sub_path

--- a/src/pretix/plugins/socialauth/templates/socialauth/social_setup.html
+++ b/src/pretix/plugins/socialauth/templates/socialauth/social_setup.html
@@ -24,7 +24,9 @@
                 <a href="https://medium.com/@tony.infisical/guide-to-using-oauth-2-0-to-access-google-apis-dead94d6866d">Guide to using OAuth 2.0 to access Google APIs</a>
             </li>
             <li>{% trans "Set the callback URL to:" %} 
-                <code>{{ "https://app.eventyay.com/tickets/accounts/google/login/callback/" }}</code>
+                {% with callback_url=tickets_domain|add:"/accounts/google/login/callback/" %}
+                    <code>{{ callback_url }}</code>
+                {% endwith %}
             </li>
             <li>{% trans "Add the client ID and client secret to admin settings" %}</li>
         </ul>
@@ -38,7 +40,9 @@
         <p>{% trans "Instructions:" %}</p>
         <ul>
             <li>{% trans "Set the callback URL to:" %} 
-                <code>{{ "https://app.eventyay.com/tickets/accounts/github/login/callback/" }}</code>
+                {% with callback_url=tickets_domain|add:"/accounts/github/login/callback/" %}
+                    <code>{{ callback_url }}</code>
+                {% endwith %}
             </li>
             <li>{% trans "Add the client ID and client secret to admin settings" %}</li>
         </ul>
@@ -69,7 +73,9 @@
                     <li>{% trans "an description description" %}</li>
                     <li>
                         {% trans 'Set Oauth "callback" URL to:' %}
-                        <code>{{ "https://app.eventyay.com/tickets/accounts/mediawiki/login/callback/" }}</code>
+                        {% with callback_url=tickets_domain|add:"/accounts/mediawiki/login/callback/" %}
+                            <code>{{ callback_url }}</code>
+                        {% endwith %}
                     </li>
                     <li>{% trans "Contact Email address" %}</li>
                     <li>{% trans 'Tick "Client is confidential"' %}</li>
