--- a/src/pretalx/orga/templates/orga/includes/user_name.html
+++ b/src/pretalx/orga/templates/orga/includes/user_name.html
@@ -1,9 +1,11 @@
 {% load thumbnail %}
 <span class="user-name-display">
   {{ user.get_display_name }}
-  {% if user.has_avatar %}
-    {% if lightbox %}<a href="{{ user.avatar.url }}" data-lightbox="{{ user.avatar.url }}">{% endif %}
-    <img loading="lazy" class="tiny-avatar" src="{{ user.avatar|thumbnail:'tiny' }}">
-    {% if lightbox %}</a>{% endif %}
+  {% if not request.event or request.event.cfp.request_avatar %}
+    {% if user.has_avatar %}
+      {% if lightbox %}<a href="{{ user.avatar.url }}" data-lightbox="{{ user.avatar.url }}">{% endif %}
+      <img loading="lazy" class="tiny-avatar" src="{{ user.avatar|thumbnail:'tiny' }}">
+      {% if lightbox %}</a>{% endif %}
+    {% endif %}
   {% endif %}
 </span>
