--- a/src/pretix/control/templates/pretixcontrol/organizers/billing.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/billing.html
@@ -28,6 +28,7 @@
                 {% bootstrap_field form.city layout="control" %}
                 {% bootstrap_field form.country layout="control" %}
                 {% bootstrap_field form.tax_id layout="control" %}
+                {% bootstrap_field form.invoice_voucher layout="control" %}
                 {% bootstrap_field form.preferred_language layout="control" %}
                 <div class="form-group submit-group">
                     <button type="submit" class="btn btn-primary btn-save">
