Eventyay Common: Create a dashboard and enhance settings page (#498)
* Add settings into basic box

* Change bootstrap model, add dashboard settings url property for event

* Add extra space for modal

* Refactor code

* Remove 'Settings for' in label

* Add more type hint

* Add base class for celery task, add button enable disable component, refactor code

* Add default empty string for get

* eventyay-common: enhance status button in settings page

* Revert "Add default empty string for get"

This reverts commit 8ef4ec92141d465c01366f6602bebcaa792390d2.

* Add default empty str

* Change modal style, correct spelling

* Fix urljoin

* Fix urljoin

* Increase padding

---------

Co-authored-by: nttduong <nttduong1@tma.com.vn>

--- a/src/pretix/eventyay_common/templates/eventyay_common/base.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/base.html
@@ -13,6 +13,7 @@
     		<link rel="stylesheet" type="text/x-scss" href="{% static "pretixcontrol/scss/main.scss" %}" />
             <link rel="stylesheet" type="text/x-scss" href="{% static "lightbox/css/lightbox.scss" %}" />
             <link rel="stylesheet" href="{% static 'eventyay-common/css/dashboard.css' %}">
+            <link rel="stylesheet" href="{% static 'eventyay-common/css/settings.css' %}" />
 		{% endcompress %}
         {% if DEBUG %}
             <script type="text/javascript" src="{% url 'javascript-catalog' lang=request.LANGUAGE_CODE %}"
