Eventyay Common: Create an event dashboard (#505)
* Add dashboard eventyay common

* Add custom css

* Change background

* Add component link for eventyay_common

* Update css style

* Fix isort

* Add custom style

* Add alert pop up, add line break

* Resolve conversation: update template url

* Refactor code eventyay_common

* Refactor context and navigation

* Add missing url return

* Fix css error

* Update tickets text

* Resolve conversations

* Fix isort warning

* Update modal

* Fix urljoin

--- a/src/pretix/eventyay_common/templates/eventyay_common/base.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/base.html
@@ -144,6 +144,43 @@
                 </ul>
                 <div class="navbar-default sidebar" role="navigation">
                     <div class="sidebar-nav navbar-nav-collapse navbar-collapse">
+                        <div class="dropdown context-selector">
+                            {% block nav_top_header %}
+                                {% if request.event %}
+                                    <a href="#" class="dropdown-toggle">
+                                        <span class="fa-stack fa-lg">
+                                          <i class="fa fa-circle fa-stack-2x"></i>
+                                          <i class="fa fa-calendar fa-stack-1x fa-inverse"></i>
+                                        </span>
+                                        <div class="context-indicator">
+                                            <span class="context-name">{{ request.event }}</span>
+                                            <span class="context-meta">{{ request.event.get_date_range_display }}</span>
+                                        </div>
+                                    </a>
+                                {% elif request.organizer %}
+                                    <a href="#" class="dropdown-toggle">
+                                        <span class="fa-stack fa-lg">
+                                          <i class="fa fa-circle fa-stack-2x"></i>
+                                          <i class="fa fa-group fa-stack-1x fa-inverse"></i>
+                                        </span>
+                                        <div class="context-indicator">
+                                            <span class="context-name">{{ request.organizer }}</span>
+                                            <span class="context-meta">{% trans "Organizer account" %}</span>
+                                        </div>
+                                    </a>
+                                {% else %}
+                                <a href="#" class="dropdown-toggle">
+                                    <span class="fa-stack fa-lg">
+                                      <i class="fa fa-circle fa-stack-2x"></i>
+                                      <i class="fa fa-user fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                    <div class="context-indicator">
+                                        <span class="context-name">{{ request.user }}</span>
+                                    </div>
+                                </a>
+                                {% endif %}
+                            {% endblock %}
+                        </div>
                         <ul class="nav" id="side-menu">
                             {% block nav %}
                                 {% for nav in nav_items %}
