--- a/src/pretix/eventyay_common/templates/eventyay_common/event/component_link.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/event/component_link.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 <div class="navigation-button">
     {% if request.organizer and request.event %}
-        <a href='{% url "eventyay_common:event.index" organizer=request.organizer.slug event=request.event.slug %}' class="header-nav btn btn-outline-success">
+        <a href="#" class="header-nav btn btn-outline-success active">
             <i class="fa fa-home"></i> {% trans "Home" %}
         </a>
-        <a href="#" class="header-nav btn btn-outline-success active">
+        <a href='{% url "control:event.index" organizer=request.organizer.slug event=request.event.slug %}' class="header-nav btn btn-outline-success">
             <i class="fa fa-ticket"></i> {% trans "Tickets" %}
         </a>
         {% if is_talk_event_created %}
