--- a/src/pretalx/cfp/templates/cfp/event/login.html
+++ b/src/pretalx/cfp/templates/cfp/event/login.html
@@ -18,5 +18,5 @@
             or if you are participating in the event as a speaker or organizer.
         {% endblocktranslate %}
     </p>
-    {% include "common/auth.html" with hide_register=True %}
+    {% include "common/auth.html" with hide_register=True next_url=request.get_full_path %}
 {% endblock %}
