--- a/src/pretalx/cfp/templates/cfp/event/submission_base.html
+++ b/src/pretalx/cfp/templates/cfp/event/submission_base.html
@@ -20,12 +20,14 @@
 {% block content %}
     <div id="submission-steps" class="stages">
         {% for stp in cfp_flow %}
+            {% if stp.identifier != 'user' %}
             <a {% if stp.resolved_url %}href="{{ stp.resolved_url }}"{% endif %} class="step step-{% if stp.is_before %}done{% elif stp.identifier == step.identifier %}current{% else %}tbd{% endif %}">
                 <div class="step-icon">
                     <span class="fa {% if stp.is_before %}fa-check{% elif stp.icon %}fa-{{ stp.icon }}{% else %}fa-pencil{% endif %}"></span>
                 </div>
                 <div class="step-label">{{ stp.label }}</div>
             </a>
+            {% endif %}
         {% endfor %}
         <div class="step step-tbd">
             <div class="step-icon">
@@ -35,6 +37,7 @@
         </div>
     </div>
     {% block cfp_form %}
+        {% if request.user.is_authenticated %}
         <form method="post"{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
             {% csrf_token %}
             {{ wizard.management_form }}
@@ -78,5 +81,10 @@
                 </div>
             {% endblock buttons %}
         </form>
+        {% else %}
+            <h2>{% translate "You are required to be logged in to submit a proposal" %}</h2>
+            <p>{% translate "To create your proposal, you need an account on this page. This not only gives us a way to contact you, it also gives you the possibility to edit your proposal or to view its current state." %}</p>
+            {% include "common/auth.html" with form=form no_form=True no_buttons=True next_url=request.get_full_path %}
+        {% endif %}
     {% endblock cfp_form %}
 {% endblock content %}
