--- a/src/pretalx/orga/templates/orga/settings/form.html
+++ b/src/pretalx/orga/templates/orga/settings/form.html
@@ -86,7 +86,7 @@
             <fieldset>
                 <legend>{% translate "Other settings" %}</legend>
 
-                <div class="form-group">
+                <div class="form-group hide-optional">
                     <label class="col-md-3 control-label">
                         {% translate "Header links" %}<br>
                         <span class="optional">{% translate "Optional" %}</span>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group hide-optional">
                     <label class="col-md-3 control-label">
                         {% translate "Footer links" %}<br>
                         <span class="optional">{% translate "Optional" %}</span>
