Reapply "Provide outbound link signing and redirects"
This reverts commit a278cf624e2e8f33c2a713ff4e78ad2164f2df89.

--- a/src/pretalx/common/templates/common/error.html
+++ b/src/pretalx/common/templates/common/error.html
@@ -22,8 +22,10 @@
     <body>
         <div id="wrapper">
             {% block error_image %}{% endblock error_image %}
-            <h2>{% block error_message %}{% endblock error_message %}</h2>
-            <h4 class="mt-4">HTTP {% block error_code %}{% endblock error_code %}</h4>
+            {% block content %}
+                <h2>{% block error_message %}{% endblock error_message %}</h2>
+                <h4 class="mt-4">HTTP {% block error_code %}{% endblock error_code %}</h4>
+            {% endblock content %}
         </div>
     </body>
 </html>
