--- a/src/pretalx/common/templates/common/powered_by.html
+++ b/src/pretalx/common/templates/common/powered_by.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load safelink %}
 
 {% comment %}
 
@@ -30,7 +31,8 @@
     you can reach me at sales@pretalx.com.
 
 {% endcomment %}
-{% with 'href="https://eventyay.com" target="_blank" rel="noopener"' as a_attr %}
+{% safelink "https://eventyay.com" as redir %}
+{% with 'href="'|add:redir|add:'" target="_blank" rel="noopener"'|safe as a_attr %}
     {% blocktranslate trimmed %}
         powered by <a {{ a_attr }}>eventyay</a>
     {% endblocktranslate %}
