--- a/src/pretalx/cfp/templates/cfp/event/submission_base.html
+++ b/src/pretalx/cfp/templates/cfp/event/submission_base.html
@@ -82,8 +82,8 @@
             {% endblock buttons %}
         </form>
         {% else %}
-            <h2>{% translate "You are required to be logged in to submit a proposal" %}</h2>
-            <p>{% translate "To create your proposal, you need an account on this page. This not only gives us a way to contact you, it also gives you the possibility to edit your proposal or to view its current state." %}</p>
+            <h2>{{ _('You need to be logged in to submit a proposal') }}</h2>
+            <p>{{ _('Please log in or create an account to submit a proposal. This enables us to contact you and allows you to edit your proposal or check its status at any time.') }}</p>
             {% include "common/auth.html" with form=form no_form=True no_buttons=True next_url=request.get_full_path %}
         {% endif %}
     {% endblock cfp_form %}
