--- a/src/pretalx/common/templates/common/auth.html
+++ b/src/pretalx/common/templates/common/auth.html
@@ -28,7 +28,7 @@
         <div class="panel panel-default">
             <div class="panel-heading text-center" id="headingOne">
                 <a class="btn btn-lg btn-primary btn-block mt-3" href="{% oauth_login_url next_url %}">
-                    {{ _('Login') }}
+                    {{ login_button_label }}
                 </a>
             </div>
         </div>
