Disable the subheader login link when there is already login button (#280)

--- a/src/pretalx/common/templates/common/base.html
+++ b/src/pretalx/common/templates/common/base.html
@@ -139,7 +139,7 @@
                                     </form>
                                 </div>
                             </details>
-                        {% elif not is_html_export %}
+                        {% elif not subheader_login_link_disabled and not is_html_export %}
                             {% if request.event %}
                                 <a href="{{ request.event.urls.login }}?next={{ request.path|urlencode }}">login</a>
                             {% else %}
