--- a/src/pretalx/common/templates/common/availabilities.html
+++ b/src/pretalx/common/templates/common/availabilities.html
@@ -16,7 +16,7 @@
 {% endcompress %}
 
 {% with html_locale|slice:":2" as calendar_locale %}
-    {% if calendar_locale and calendar_locale != "en" %}
+    {% if calendar_locale and calendar_locale in AVAILABLE_CALENDAR_LOCALES %}
         <script defer id="calendar-locale" data-locale="{{ calendar_locale }}" src="{% static "vendored/fullcalendar/"|add:calendar_locale|add:".js" %}"></script>
     {% endif %}
 {% endwith %}
