Fix: Customized field label not loaded (#291)

--- a/src/pretalx/common/templates/common/avatar.html
+++ b/src/pretalx/common/templates/common/avatar.html
@@ -27,13 +27,13 @@
     </div>
 </div>
 <div class="avatar-form form-group row">
-    <label class="col-md-3 col-form-label">{{ _('Profile picture source') }}</label>
+    <label class="col-md-3 col-form-label">{{ form.avatar_source.field.label }}</label>
     <div class="col-md-9">
         {{ form.avatar_source.as_widget }}
     </div>
 </div>
 <div class="avatar-form form-group row">
-    <label class="col-md-3 col-form-label">{{ _('Profile picture license') }}</label>
+    <label class="col-md-3 col-form-label">{{ form.avatar_license.field.label }}</label>
     <div class="col-md-9">
         {{ form.avatar_license.as_widget }}
     </div>
