--- a/src/pretix/control/templates/pretixcontrol/organizers/ssoclients.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/ssoclients.html
@@ -18,6 +18,7 @@
         <thead>
         <tr>
             <th>{% trans "Name" %}</th>
+            <th>{% trans "Status" %}</th>
             <th></th>
         </tr>
         </thead>
@@ -31,6 +32,13 @@
                         {% if not c.is_active %}</del>{% endif %}
                     </a>
                 </strong></td>
+                <td>
+                    {% if c.is_active %}
+                        <span class="label label-success">{% trans "Enable" %}</span>
+                    {% else %}
+                        <span class="label label-default">{% trans "Disable" %}</span>
+                    {% endif %}
+                </td>
                 <td class="text-right flip">
                     <a href="{% url "control:organizer.ssoclient.edit" organizer=request.organizer.slug client=c.id %}"
                             class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
